# AxisDB

./: ARCHITECTURE.md  README.md  USE_CASES.md  pyproject.toml
axisdb/: __init__.py  api.py  errors.py
axisdb/engine/: keycodec.py  locking.py  storage.py
axisdb/index/: fields.py
axisdb/query/: ast.py  eval.py
axisdb/server/: app.py
tests/: test_api_basic.py  test_find_indexed.py  test_keycodec.py  test_locking_multiprocess.py  test_slice.py  test_storage_recovery.py
